Fix: place where poll path from queue was wrong.