@@ -4,11 +4,14 @@ import java.util.*;
 import java.util.concurrent.LinkedBlockingDeque;
 
 /**
+ * Implementation of breadth first search algorithm.
+ * This may not be good implementation.
+ * 
  * @author kaizawa
  */
 class BreadthFirstSearch extends SearchAlgorithm {
    
-    LinkedBlockingDeque<ArrayList> foundNodeQueue = new LinkedBlockingDeque<>();
+    LinkedBlockingDeque<LinkedList> foundNodeQueue = new LinkedBlockingDeque<>();
     Set<Node> foundNodeSet = new HashSet<>(); // Found, but has not children search 
     List<Node> shortestPath = Collections.emptyList();
 
@@ -19,25 +22,26 @@ class BreadthFirstSearch extends SearchAlgorithm {
     @Override
     public SearchResult doSearch() {
         // List of Node which represents path.
-        ArrayList<Node> currentPath = new ArrayList<>();
+        LinkedList<Node> currentPath = new LinkedList<>();
         currentPath.add(startNode);
-        
         foundNodeQueue.add(currentPath);
 
         while(false == foundNodeQueue.isEmpty()){
-            Node currentNode = currentPath.get(currentPath.size()-1);
+            currentPath = foundNodeQueue.poll();            
+            Node currentNode = currentPath.getLast();
 
             if (currentNode == goalNode) {
                 shortestPath = currentPath;
                 break;
             } else {
                 for (Node child : (Set<Node>) currentNode.getChildrenMap().keySet()) {
+                    time.incrementAndGet();
                     //Check if it has already been found
                     if (foundNodeSet.contains(child)) {
                         // This node has ever been found.
                         continue;
                     }
-                    ArrayList childPath = (ArrayList) currentPath.clone();
+                    LinkedList childPath = (LinkedList) currentPath.clone();
                     childPath.add(child);
 
                     // Put child path to the gray queue.
@@ -45,9 +49,8 @@ class BreadthFirstSearch extends SearchAlgorithm {
                     foundNodeSet.add(child);
                 }
             }
-            currentPath = foundNodeQueue.poll();
         } 
         // Return path which found first        
-        return new SearchResult(shortestPath, "BreadthFirstSearch");
+        return new SearchResult(shortestPath, "BreadthFirstSearch", time.get());
     }    
 }
